--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "postcss-clean": "^1.1.0",
     "postcss-preset-env": "^6.7.0",
     "rimraf": "^2.7.1",
-    "sass": "^1.22.12"
+    "sass": "^1.22.12",
+    "tailwindcss": "^1.1.4"
   },
   "dependencies": {}
 }
